@@ -2,6 +2,35 @@
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-12-15</b>
 <tr bgcolor=lightgrey>
+<td>20:52
+<td>detar
+<td>
+configure
+1.19<br>
+include/asqtad_action.h
+1.2<br>
+include/qop_internal.h
+1.7<br>
+lib/asqtad_force.c
+1.3<br>
+lib/asqtad_force_fnmat_p.c
+1.2<br>
+lib/asqtad_force_p.c
+1.5<br>
+<td>Change option setting to use threshold for changeover from ASVEC to FNMAT
+Add block vector length for ASVEC
+</tr>
+
+<tr>
+<td>20:51
+<td>detar
+<td>
+lib/symanzik_1loop_gauge_force_p.c
+1.3<br>
+<td>Add Ludmila's improvements.
+</tr>
+
+<tr bgcolor=lightgrey>
 <td>16:44
 <td>detar
 <td>
@@ -1007,4 +1036,4 @@ lib/asqtadp.c
 </tr>
 
 </table>
-<p>This page was created on Fri Dec 15 15:16:37 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
+<p>This page was created on Fri Dec 15 16:16:17 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
